--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: ant
 email: cory@launchboxhq.com
 description: > # this means to ignore newlines until "baseurl:"
   A pretty cool thing.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/postcss-ant" # the subpath of your site, e.g. /blog
 
 # Build settings
 markdown: kramdown
